# unsloth-tasks

./: .gitignore  README.md  deploy.py  pyproject.toml  setup.sh  test.py
infrastructure/: cloudformation.yaml  deploy.py
scripts/: gpu_check.py
src/tasks/task1/: setup.py  test.py
