[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "unsloth_tasks"
version = "0.0.1"
dependencies = [
    "boto3",
    "boto3-stubs",
]
requires-python = ">=3.11"

[project.optional-dependencies]
cloud = [
    "sentencepiece",
    "protobuf",
    "datasets",
    "huggingface_hub",
    "hf_transfer",
    "torch",
    "transformers",
]
depless = [
    "bitsandbytes",
    "accelerate",
    "xformers==0.0.29",
    "peft",
    "trl",
    "triton",
    "cut_cross_entropy",
    "unsloth_zoo",
    "unsloth",
]
dev = [
    "mypy",
    "black",
    "isort",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
