[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "unsloth-tasks"
version = "0.0.1"
dependencies = [
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "black",
    "isort",
]
core = [
    "sentencepiece",
    "protobuf",
    "datasets",
    "huggingface_hub",
    "hf_transfer",
    "torch",
    "transformers",
]
core-depless = [
    "bitsandbytes",
    "accelerate",
    "xformers==0.0.29",
    "peft",
    "trl",
    "triton",
    "cut_cross_entropy",
    "unsloth_zoo",
    "unsloth",
]
infra = [
    "boto3",
    "boto3-stubs[essential]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
