[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "unsloth-tasks"
version = "0.0.1"
dependencies = [
    "sentencepiece",
    "protobuf",
    "datasets",
    "huggingface_hub",
    "hf_transfer",
    "torch",
    "transformers",
    "bitsandbytes",
    "accelerate",
    "xformers==0.0.29",
    "peft",
    "trl",
    "triton",
    "cut_cross_entropy",
    "unsloth_zoo",
    "unsloth",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest",
    "python-language-server",
    "pylsp-mypy",
    "mypy",
    "black",
    "isort",
    "ipython"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
